Fixed Projects PGae Description

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -622,6 +622,19 @@ h6 {
   color: color-mix(in srgb, var(--default-color), transparent 70%);
 }
 
+.nav-pills .nav-link {
+  border: 1px solid var(--accent-color);
+  border-radius: 8px;
+  margin: 5px;
+  padding: 10px 15px;
+  color: #fff;
+}
+
+.nav-pills .nav-link.active {
+  background-color: var(--accent-color);
+  color: #fff;
+}
+
 /*--------------------------------------------------------------
 # Global Sections
 --------------------------------------------------------------*/
@@ -1741,17 +1754,5 @@ section,
 }
 
 /*--------------------------------------------------------------
-# Properties Navigation Section
+# Starter Section
 --------------------------------------------------------------*/
-.nav-pills .nav-link {
-  border: 1px solid var(--accent-color);
-  border-radius: 8px;
-  margin: 5px;
-  padding: 10px 15px;
-  color: #fff;
-}
-
-.nav-pills .nav-link.active {
-  background-color: var(--accent-color);
-  color: #fff;
-}
